# fastApiSql

./: README.md  pyproject.toml
fastApiBK/: README.md  pyproject.toml
fastApiBK/fastapibk/: auth.py  db.py  main.py  models.py  settings.py
fastApiBK/fastapibk/router/: user.py
fastapibk/: main.py  settings.py
frontend/: pnpm-lock.yaml
frontend/src/actions/: actions.ts
frontend/src/components/: Task.tsx  TodoTable.tsx
frontend/src/components/ui/: Modal.tsx
