[tool.poetry]
name = "fastapibk"
version = "0.1.0"
description = ""
authors = ["Debsourya Datta <91617309+debsouryadatta@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
